[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "2.0.12"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
tokio-util = {version = "0.7", features = ["codec"]}
futures-util = { version = "0.3", features = ["sink"] }
memchr = "2.7.5"
